2000-10-25  Sven Wischnowsky  <wischnow@zsh.org>

	* 13082: Src/Zle/complist.c, Src/Zle/compresult.c: add a counter
 	for invalidatelist() to allow finding out if there is a new list
	
2000-10-24  Sven Wischnowsky  <wischnow@zsh.org>

	* 13071: Src/Zle/complist.c, Src/Zle/compresult.c: avoid printing
 	file type characters in completion lists for matches ending in a
 	slash
	
2000-10-23  Sven Wischnowsky  <wischnow@zsh.org>

	* 13037: Completion/Core/_path_files, Doc/Zsh/compsys.yo: change
 	some tags used in filename completion: no tag for file-sort,
 	fake-files and ignore-parents, paths for accept-exact
	
2000-10-21  Bart Schaefer  <schaefer@zsh.org>

	* 13057: Src/Zle/zle_main.c: `vared -h' should not imply `vared -e';
	use of -e should override the setting of the IGNOREEOF option.
	(The -e flag was added by zsh-workers/9396, for 3.1.6-dev-16.)

2000-10-20  Bart Schaefer  <schaefer@zsh.org>

	* 13055: Src/hist.c, Src/Zle/zle_main.c: Fix `vared -h' for non-
	interactive shells (scripts).

2000-10-19  Sven Wischnowsky  <wischnow@zsh.org>

	* 13036: Completion/Commands/_bash_completions,
 	Completion/Commands/_complete_debug,
 	Completion/Commands/_complete_help,
 	Completion/Commands/_correct_word,
 	Completion/Commands/_expand_word,
 	Completion/Commands/_history_complete_word,
 	Completion/Commands/_next_tags, Completion/Core/_main_complete,
 	Completion/Core/compinit: simplify setting standard completion
 	system options using $_comp_options
	
	* 13035: Doc/Zsh/mod_zpty.yo, Functions/Misc/nslookup, Src/utils.c,
 	Src/Modules/zpty.c, Test/comptest: make non-blocking IO on ptys
 	work again; add -t option to test if command is still alive
	
2000-10-19  Wayne Davison  <wayned@users.sourceforge.net>

	* 13034: Src/hist.c: Don't call histreduceblanks() if the line
	didn't parse right.

2000-10-17  Bart Schaefer  <schaefer@zsh.org>

	* unposted: Functions/Misc/zmv: Small typo in example in comment.

2000-10-17  Sven Wischnowsky  <wischnow@zsh.org>
